Setting OGP and SEO

--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta property="og:title" content="東京都市大学 映像研究会">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://eizouken.vercel.app/">
+    <meta property="og:image" content="@/assets/ms-joinus.png/">
+    <meta property="og:site_name" content="東京都市大学 映像研究会">
+    <meta property="og:locale" content="ja_JP">
+    <meta property="og:locale:alternate" content="en_US">
+    <meta property="og:description" content="東京都市大学 映像研究会">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@eizouken">
+    <meta name="twitter:creator" content="@eizouken">
+    <meta name="twitter:title" content="東京都市大学 映像研究会">
+    <meta name="twitter:description" content="東京都市大学 映像研究会">
+    <meta name="twitter:image" content="@/assets/ms-joinus.png/">
+    <meta name="twitter:url" content="https://eizouken.vercel.app/">
+    <meta name="twitter:domain" content="eizouken.vercel.app">
+    <meta name="twitter:label1" content="Written by">
+    <meta name="twitter:data1" content="Manato Yamashita">
+    <meta name="twitter:label2" content="Est. reading time">
+    <meta name="twitter:data2" content="10 minute">
+    <meta name="keywords" content="東京都市大学,映像研究会,映像研,tcu,映像,デジコン">
+    <meta name="description" content="東京都市大学 映像研究会">
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.svc">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
