--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta property="og:site_name" content="東京都市大学 映像研究会">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:locale:alternate" content="en_US">
-    <meta property="og:description" content="東京都市大学 映像研究会">
+    <meta property="og:description" content="東京都市大学 映像研究会の公式サイトです。実写映像を主に脚本から撮影まで会内で製作しています。">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@eizouken">
     <meta name="twitter:creator" content="@eizouken">
     <meta name="twitter:title" content="東京都市大学 映像研究会">
-    <meta name="twitter:description" content="東京都市大学 映像研究会">
+    <meta name="twitter:description" content="東京都市大学 映像研究会の公式サイトです。実写映像を主に脚本から撮影まで会内で製作しています。">
     <meta name="twitter:image" content="@/assets/ms-joinus.png/">
     <meta name="twitter:url" content="https://eizouken.vercel.app/">
     <meta name="twitter:domain" content="eizouken.vercel.app">
